// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem should render properly when it is in active state 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c4 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c4 .c0 {
  color: #126AFA;
}

.c5 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c5 .c0 {
  color: #607890;
}

.c5:hover .c0 {
  color: #303C48;
}

.c5:active .c0 {
  color: #13181D;
}

.c2 > .c3:first-of-type > .sc-pITNg:first-of-type > .c0 {
  margin-top: 0.6rem;
}

<span
  class="c0 c1"
>
  Home
</span>
`;

exports[`NavItem should render properly when it is in default state 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c5 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c5 .c0 {
  color: #126AFA;
}

.c6 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c6 .c0 {
  color: #607890;
}

.c6:hover .c0 {
  color: #303C48;
}

.c6:active .c0 {
  color: #13181D;
}

.c7 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 1;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c7 .c0 {
  color: #126AFA;
}

.c8 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 1;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c8 .c0 {
  color: #607890;
}

.c8:hover .c0 {
  color: #303C48;
}

.c8:active .c0 {
  color: #13181D;
}

.c2 > .c4:first-of-type > .sc-pITNg:first-of-type > .c0 {
  margin-top: 0.6rem;
}

.c3 > .c4:first-of-type > .sc-pITNg:first-of-type > .c0 {
  margin-top: 0.6rem;
}

<span
  class="c0 c1"
>
  Search
</span>
`;

exports[`NavItem should render properly when it is in hovered state 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c5 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c5 .c0 {
  color: #126AFA;
}

.c6 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 0;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c6 .c0 {
  color: #607890;
}

.c6:hover .c0 {
  color: #303C48;
}

.c6:active .c0 {
  color: #13181D;
}

.c7 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 1;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c7 .c0 {
  color: #126AFA;
}

.c8 .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  justify-self: left;
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-out,color 100ms ease-out;
  transition: opacity 200ms ease-out,color 100ms ease-out;
  opacity: 1;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c8 .c0 {
  color: #607890;
}

.c8:hover .c0 {
  color: #303C48;
}

.c8:active .c0 {
  color: #13181D;
}

.c2 > .c4:first-of-type > .sc-pITNg:first-of-type > .c0 {
  margin-top: 0.6rem;
}

.c3 > .c4:first-of-type > .sc-pITNg:first-of-type > .c0 {
  margin-top: 0.6rem;
}

<span
  class="c0 c1"
>
  Search
</span>
`;
